--- a/TopCard/src/swt/swl/topcard/view/RequirementCardView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/RequirementCardView.fxml
@@ -11,16 +11,7 @@
    <children>
       <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="743.0" prefWidth="902.0">
          <children>
-            <Button fx:id="search" layoutX="715.0" layoutY="14.0" mnemonicParsing="false" onAction="#searchButtonClicked" prefHeight="38.0" prefWidth="132.0" text="Search" textAlignment="CENTER" />
-            <Button fx:id="start" layoutX="44.0" layoutY="14.0" mnemonicParsing="false" onAction="#startButtonClicked" prefHeight="38.0" prefWidth="132.0" text="Start" textAlignment="CENTER" />
-            <MenuButton fx:id="showRQCards" layoutX="510.0" layoutY="14.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="132.0" text="showRQCards" textAlignment="CENTER">
-               <items>
-                  <MenuItem fx:id="toVote" mnemonicParsing="false" onAction="#toVoteButtonClicked" text="to Vote" />
-                  <MenuItem fx:id="myRqCards" mnemonicParsing="false" onAction="#myRqCardsButtonClicked" text="myRqCards" />
-               </items>
-            </MenuButton>
-            <Button fx:id="createNewRq" layoutX="286.0" layoutY="14.0" mnemonicParsing="false" onAction="#createNewRqButtonClicked" prefHeight="38.0" prefWidth="132.0" text="Create new RQ" />
-            <HBox layoutY="62.0" prefHeight="685.0" prefWidth="917.0">
+            <HBox layoutY="62.0" prefHeight="685.0" prefWidth="902.0">
                <children>
                   <Pane fx:id="mainWindowPainLeft" prefHeight="692.0" prefWidth="446.0">
                      <children>
@@ -32,7 +23,7 @@
                         </TableView>
                      </children>
                   </Pane>
-                  <VBox prefHeight="532.0" prefWidth="170.0">
+                  <VBox prefHeight="685.0" prefWidth="177.0">
                      <children>
                         <Label fx:id="titleLabel" prefHeight="50.0" prefWidth="159.0" text="Title:">
                            <font>
@@ -64,7 +55,7 @@
                               <Font size="15.0" />
                            </font>
                         </Label>
-                        <Label fx:id="supportingMaterialsLabel" prefHeight="50.0" prefWidth="163.0" text="Supporting Materials:">
+                        <Label fx:id="supportingMaterialsLabel" prefHeight="50.0" prefWidth="179.0" text="Supporting Materials:">
                            <font>
                               <Font size="15.0" />
                            </font>
@@ -80,6 +71,9 @@
                            </font>
                         </Label>
                      </children>
+                     <padding>
+                        <Insets left="10.0" />
+                     </padding>
                   </VBox>
                   <VBox prefHeight="572.0" prefWidth="227.0">
                      <children>
@@ -123,6 +117,37 @@
                   </VBox>
                </children>
             </HBox>
+            <HBox layoutX="34.0" layoutY="14.0" prefHeight="40.0" prefWidth="854.0" spacing="50.0">
+               <children>
+                  <Button fx:id="startButton" mnemonicParsing="false" onAction="#startButtonClicked" prefHeight="38.0" prefWidth="132.0" text="Start" textAlignment="CENTER" />
+                  <Button fx:id="createModuleButton" mnemonicParsing="false" onAction="#createModuleButtonClicked" prefHeight="40.0" prefWidth="152.0" text="Create new Module" />
+                  <Button fx:id="createNewRqButton" mnemonicParsing="false" onAction="#createNewRqButtonClicked" prefHeight="38.0" prefWidth="132.0" text="Create new RQ" />
+                  <MenuButton fx:id="showRQCards" mnemonicParsing="false" prefHeight="38.0" prefWidth="132.0" text="showRQCards" textAlignment="CENTER">
+                     <items>
+                        <MenuItem fx:id="toVote" mnemonicParsing="false" onAction="#toVoteButtonClicked" text="to Vote" />
+                        <MenuItem fx:id="myRqCards" mnemonicParsing="false" onAction="#myRqCardsButtonClicked" text="myRqCards" />
+                     </items>
+                  </MenuButton>
+                  <Button fx:id="searchRqButton" mnemonicParsing="false" onAction="#searchRqButtonClicked" prefHeight="38.0" prefWidth="132.0" text="Search" textAlignment="CENTER" />
+               </children>
+            </HBox>
+            <MenuBar layoutX="8.0" layoutY="-6.0" prefHeight="29.0" prefWidth="288.0">
+              <menus>
+                  <Menu mnemonicParsing="false" text="Alternative zu unten:" />
+                <Menu mnemonicParsing="false" text="New">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="Requirement Card" />
+                        <MenuItem mnemonicParsing="false" text="Module" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Show">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="my RQ" />
+                        <MenuItem mnemonicParsing="false" text="RQ to vote" />
+                  </items>
+                </Menu>
+              </menus>
+            </MenuBar>
          </children>
       </Pane>
    </children>
