--- a/TopCard/bin/swt/swl/topcard/view/RequirementCardView.fxml
+++ b/TopCard/bin/swt/swl/topcard/view/RequirementCardView.fxml
@@ -17,8 +17,8 @@
                      <children>
                         <TableView fx:id="requirementCardsTable" layoutX="1.0" layoutY="7.0" prefHeight="685.0" prefWidth="445.0">
                           <columns>
-                            <TableColumn fx:id="requirementCards" prefWidth="443.9999694824219" text="requirementCards" />
-                              <TableColumn fx:id="owner" prefWidth="443.9999694824219" text="owner" />
+                            <TableColumn fx:id="requirementCards" prefWidth="212.0" text="requirementCards" />
+                              <TableColumn fx:id="owner" prefWidth="232.0" text="owner" />
                           </columns>
                         </TableView>
                      </children>
@@ -117,37 +117,18 @@
                   </VBox>
                </children>
             </HBox>
-            <HBox layoutX="34.0" layoutY="14.0" prefHeight="40.0" prefWidth="854.0" spacing="50.0">
+            <HBox layoutX="8.0" layoutY="14.0" prefHeight="26.0" prefWidth="783.0">
                <children>
-                  <Button fx:id="startButton" mnemonicParsing="false" onAction="#startButtonClicked" prefHeight="38.0" prefWidth="132.0" text="Start" textAlignment="CENTER" />
-                  <Button fx:id="createModuleButton" mnemonicParsing="false" onAction="#createModuleButtonClicked" prefHeight="40.0" prefWidth="152.0" text="Create new Module" />
-                  <Button fx:id="createNewRqButton" mnemonicParsing="false" onAction="#createNewRqButtonClicked" prefHeight="38.0" prefWidth="132.0" text="Create new RQ" />
-                  <MenuButton fx:id="showRQCards" mnemonicParsing="false" prefHeight="38.0" prefWidth="132.0" text="showRQCards" textAlignment="CENTER">
-                     <items>
-                        <MenuItem fx:id="toVote" mnemonicParsing="false" onAction="#toVoteButtonClicked" text="to Vote" />
-                        <MenuItem fx:id="myRqCards" mnemonicParsing="false" onAction="#myRqCardsButtonClicked" text="myRqCards" />
-                     </items>
+                  <MenuButton mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" text="New">
+                    <items>
+                      <MenuItem fx:id="createModuleButton" mnemonicParsing="false" onAction="#createModuleButtonClicked" text="Module" />
+                      <MenuItem fx:id="createNewRqButton" mnemonicParsing="false" onAction="#createNewRqButtonClicked" text="Requirement Card" />
+                    </items>
                   </MenuButton>
                   <Button fx:id="searchRqButton" mnemonicParsing="false" onAction="#searchRqButtonClicked" prefHeight="38.0" prefWidth="132.0" text="Search" textAlignment="CENTER" />
+                  <Button fx:id="startButton" mnemonicParsing="false" onAction="#startButtonClicked" prefHeight="21.0" prefWidth="130.0" text="Refresh" textAlignment="CENTER" />
                </children>
             </HBox>
-            <MenuBar layoutX="8.0" layoutY="-6.0" prefHeight="29.0" prefWidth="288.0">
-              <menus>
-                  <Menu mnemonicParsing="false" text="Alternative zu unten:" />
-                <Menu mnemonicParsing="false" text="New">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Requirement Card" />
-                        <MenuItem mnemonicParsing="false" text="Module" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Show">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="my RQ" />
-                        <MenuItem mnemonicParsing="false" text="RQ to vote" />
-                  </items>
-                </Menu>
-              </menus>
-            </MenuBar>
          </children>
       </Pane>
    </children>
