--- a/TopCard/src/swt/swl/topcard/view/SubscribeConfirmationDialogueView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/SubscribeConfirmationDialogueView.fxml
@@ -13,14 +13,14 @@
 				<Font size="22.0" />
 			</font>
 		</Label>
-		<Label layoutX="14.0" layoutY="49.0" text="You've already subscribed on a developer team, " textFill="#9d3636" />
+		<Label fx:id="confirmationMessageRowOneLabel" layoutX="14.0" layoutY="49.0" text="You've already subscribed on a developer team, " textFill="#9d3636" />
       <HBox layoutX="273.0" layoutY="90.0" prefHeight="26.0" prefWidth="244.0" spacing="10.0">
          <children>
       		<Button fx:id="cancelButton" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
-            <Button fx:id="onNewTeamButton" mnemonicParsing="false" onAction="#onNewTeamButtonClicked" prefHeight="26.0" prefWidth="83.0" text="On" />
-      		<Button fx:id="onBothButton" mnemonicParsing="false" onAction="#onBothButtonClicked" text="On both" />
+            <Button fx:id="leftButton" mnemonicParsing="false" onAction="#leftButtonClicked" prefHeight="26.0" prefWidth="83.0" text="On #" />
+      		<Button fx:id="rightButton" mnemonicParsing="false" onAction="#rightButtonClicked" text="On both" />
          </children>
       </HBox>
-      <Label layoutX="14.0" layoutY="65.0" text="subscribe on new team AND your old team OR only on the new one ? " textFill="#9d3636" />
+      <Label fx:id="confirmationMessageRowTwoLabel" layoutX="14.0" layoutY="65.0" text="subscribe on new team AND your old team OR only on the new one ? " textFill="#9d3636" />
 	</children>
 </Pane>
