--- a/TopCard/src/swt/swl/topcard/model/CreateTeamView.fxml
+++ b/TopCard/src/swt/swl/topcard/model/CreateTeamView.fxml
@@ -6,16 +6,24 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="130.0" prefWidth="531.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swt.swl.topcard.controller.CreateTeamController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+	minWidth="-Infinity" prefHeight="130.0" prefWidth="531.0"
+	xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="swt.swl.topcard.controller.CreateTeamController">
 	<children>
-		<Label fx:id="headerLabel" layoutX="14.0" layoutY="14.0" text="Create new Team">
+		<Label fx:id="headerLabel" layoutX="14.0" layoutY="14.0"
+			text="Create new Team">
 			<font>
 				<Font size="22.0" />
 			</font>
 		</Label>
-		<Label fx:id="moduleNameLabel" layoutX="14.0" layoutY="61.0" text="New team name:" />
-		<TextField fx:id="teamNameTextField" layoutX="346.0" layoutY="56.0" />
-		<Button fx:id="createButton" layoutX="381.0" layoutY="93.0" mnemonicParsing="false" onAction="#create" text="Create" />
-		<Button fx:id="cancelButton" layoutX="454.0" layoutY="93.0" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
+		<Label fx:id="moduleNameLabel" layoutX="14.0" layoutY="61.0"
+			text="New team name:" />
+		<TextField fx:id="teamNameTextField" layoutX="346.0"
+			layoutY="56.0" />
+		<Button fx:id="createButton" layoutX="381.0" layoutY="93.0"
+			mnemonicParsing="false" onAction="#create" text="Create" />
+		<Button fx:id="cancelButton" layoutX="454.0" layoutY="93.0"
+			mnemonicParsing="false" onAction="#cancel" text="Cancel" />
 	</children>
 </Pane>
